Fixes and extra's

--- a/style/master.css
+++ b/style/master.css
@@ -51,9 +51,9 @@ li {
 }
 /*---------- End Navbar ------------*/
 
-.section-homepage {
+/*.section-homepage {
     margin: 10vh 5vw 0vh 5vw;
-}
+}*/
 
 .banner {
     width: 100%;
