--- a/style/master.css
+++ b/style/master.css
@@ -18,11 +18,13 @@ body {
     font-family: 'BrookLyn';
 }
 
-
+.banner {
+    width: 100%;
+}
 
 /*----- Navbar ------*/
 a {
-    
+
 }
 
 .mainWrapper {
@@ -34,7 +36,6 @@ a {
     left: -5%;
     position: absolute;
 }
-
 .mainWrapperFlat {
     top: 0;
     position: fixed!important;
@@ -42,7 +43,6 @@ a {
     height: 75px!important;
     box-shadow: 10px 10px 10px grey!important;
 }
-
 .navbar-ul {
     position: absolute;
     top: 40%;
@@ -54,6 +54,13 @@ a {
 .navbar-li {
     padding: 100px;
     display: inline;
+}
+.nav-items {
+    color: white;
+    font-size: 25px;
+    text-decoration: none;
+    transform: rotate(5deg);
+    position: absolute;
 }
 /*---------- End Navbar ------------*/
 
@@ -67,15 +74,15 @@ a {
     color: white;
     border-color: #1f1c2c;
 }
-
-.banner {
-    width: 100%;
+.profile-pic {
+    height: 200px;
+    width: 200px;
+    margin-right: 15vw;
+    border-radius: 15px;
 }
 
-.nav-items {
-    color: white;
-    font-size: 25px;
-    text-decoration: none;
-    transform: rotate(5deg);
-    position: absolute;
+
+/*------- Login php -------*/
+.mid-section {
+    margin: 15vh;
 }
