--- a/style/master.css
+++ b/style/master.css
@@ -28,19 +28,13 @@ a {
 }
 
 .mainWrapper {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    height: 100px;
+    width: 110%;
+    height: 125px;
     background: -webkit-linear-gradient(to right, #1f1c2c, #928dab); /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #1f1c2c, #928dab); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-}
-.tilted-nav {
-    position: absolute!important;
-    left: -5%;
-    width: 110%!important;
     transform: rotate(-5deg);
-    height: 125px!important;
+    left: -5%;
+    position: absolute;
 }
 .navbar-ul {
     position: absolute;
