Dope update, still have to fix login

--- a/style/master.css
+++ b/style/master.css
@@ -30,7 +30,11 @@ input {
 
 /*----- Navbar ------*/
 a {
-
+    text-decoration: none;
+    color: white;
+}
+a:hover {
+    color: white;
 }
 
 .mainWrapper {
