--- a/style/master.css
+++ b/style/master.css
@@ -31,10 +31,10 @@ input {
 /*----- Navbar ------*/
 a {
     text-decoration: none;
-    color: white;
+    color: white!important;
 }
 a:hover {
-    color: white;
+    color: white!important;
 }
 
 .mainWrapper {
