--- a/style/master.css
+++ b/style/master.css
@@ -2,6 +2,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 @font-face {
@@ -21,8 +22,8 @@ body {
     font-family: 'BrookLyn';
 }
 
-.bg-grey {
-    background: grey!important;
+.bg-dark {
+    background: #111!important;
 }
 
 .banner {
@@ -38,21 +39,21 @@ input {
 /*----- Navbar ------*/
 .anchor {
     text-decoration: none;
-    color: white!important;
+    color: #9c9c9c!important;
 }
 .anchor:hover {
     color: white!important;
 }
 .uk-tab > .uk-active > a {
-     color: black!important;
-     border-color: black!important;
+     color: #107d10!important;
+     border-color: #111!important;
 }
 
 .mainWrapper {
     width: 110%;
     height: 125px;
-    background: -webkit-linear-gradient(to right, #1f1c2c, #928dab); /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #1f1c2c, #928dab); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: -webkit-linear-gradient(to right, #107d10, #1b272b); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #107d10, #1b272b); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     transform: rotate(-5deg);
     left: -5%;
     position: absolute;
@@ -118,17 +119,17 @@ input {
 
 /*-------- Profile php ---------*/
 .fixed-background {
-    background: -webkit-linear-gradient(to right, #1f1c2c, #928dab)!important; /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #1f1c2c, #928dab)!important; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    box-shadow: 0px 2px 20px 7px #888888;
+    background: -webkit-linear-gradient(to right, #107d10, #1b272b)!important; /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #107d10, #1b272b)!important; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    box-shadow: 0px 2px 20px 7px #111111;
 }
 .mid-profile {
-    background: #f8f8f8;
+    background: #111111;
     position: relative;
     border: 0 solid;
     width: 60%;
     left: 20%;
-    box-shadow: 0px 5px 25px 10px #f8f8f8;
+    box-shadow: 0px 5px 25px 10px #111111;
 }
 
 .profile-article {
@@ -162,6 +163,7 @@ video#bgvid {
 
 .card-top {
     margin-top: 15px;
+    background: #ededed!important;
 }
 
 .card-body {
@@ -170,4 +172,10 @@ video#bgvid {
 
 .card-footer {
     padding: 10px 42.5%!important;
+}
+
+/*---------- Settings php -----------*/
+.settings-form {
+    padding: 30px;
+    margin-bottom: 7%;
 }
