Profile settings fully working all bugs fixed, profile page fixed

--- a/style/master.css
+++ b/style/master.css
@@ -32,6 +32,9 @@ body {
 input {
     border-radius: 3px!important;
 }
+textarea {
+    border-radius: 3px!important;
+}
 .smooth {
     border-radius: 3px;
 }
